--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Examentecnico">
-        <activity android:name=".views.WelcomeView"></activity>
+        <activity android:name=".views.ListInfoView"></activity>
+        <activity android:name=".views.WelcomeView" />
         <activity android:name=".views.LoginVIew">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
