--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
         android:theme="@style/Theme.Examentecnico">
         <activity android:name=".views.ListInfoView"></activity>
         <activity android:name=".views.MainView" />
-        <activity android:name=".views.LoginVIew" />
+        <activity android:name=".views.LoginVIew">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
